CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/boost.cmake)
INCLUDE(cmake/test.cmake)
INCLUDE(cmake/python.cmake)

SET(PROJECT_ORG nim65s)
SET(PROJECT_NAME py-dynamic-graph)
SET(PROJECT_DESCRIPTION "sot/dynamic-graph-python, but in boost::python")

SET(PROJECT_URL https://github.com/${PROJECT_ORG}/${PROJECT_NAME})

SET(CUSTOM_HEADER_DIR "py-dynamic-graph")

SETUP_PROJECT()

SET(BOOST_COMPONENTS unit_test_framework)

ADD_REQUIRED_DEPENDENCY("dynamic-graph >= 3.1.0")

# Python
FINDPYTHON()
STRING(REGEX REPLACE "-" "_" PY_NAME ${PROJECT_NAME})
SET(${PY_NAME}_INSTALL_DIR ${PYTHON_SITELIB}/${PY_NAME})
SET(BOOST_COMPONENTS ${BOOST_COMPONENTS} python)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

# Boost
SEARCH_FOR_BOOST()
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_SUBDIRECTORY(include/${CUSTOM_HEADER_DIR})
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(tests)

SETUP_PROJECT_FINALIZE()
