SET(${PY_NAME}_SOURCES
  ${PY_NAME}
  signal
  entity
  )

ADD_LIBRARY(${PY_NAME} SHARED ${${PY_NAME}_SOURCES})
PKG_CONFIG_USE_DEPENDENCY(${PY_NAME} "dynamic-graph")
TARGET_LINK_BOOST_PYTHON(${PY_NAME})
SET_TARGET_PROPERTIES(${PY_NAME} PROPERTIES OUTPUT_NAME "${PY_NAME}${PYTHON_SOABI}")

INSTALL(TARGETS ${PY_NAME} DESTINATION lib)
