SET(TEST_NAME "pendulum")
SET(PY_TEST_NAME "py_${TEST_NAME}")

ADD_LIBRARY(${TEST_NAME} SHARED ${TEST_NAME})
PKG_CONFIG_USE_DEPENDENCY(${TEST_NAME} dynamic-graph)

ADD_LIBRARY(${PY_TEST_NAME} SHARED ${PY_TEST_NAME})
TARGET_LINK_LIBRARIES(${PY_TEST_NAME} ${PY_NAME} ${TEST_NAME})
TARGET_LINK_BOOST_PYTHON(${PY_TEST_NAME})

ADD_PYTHON_UNIT_TEST(${PY_TEST_NAME} "tests/${TEST_NAME}/${PY_TEST_NAME}.py" "tests/${TEST_NAME}")
